HUE-1252 [core] Correct alignment of toolbar buttons across Hue
Fixed alignment on Chrome, Safari and IE for Oozie and Jobsub

--- a/apps/jobsub/static/css/jobsub.css
+++ b/apps/jobsub/static/css/jobsub.css
@@ -1,7 +1,12 @@
 li.error {
   list-style: none;
 }
+
 a.advanced, a.advanced:link, a.advanced:hover {
   color: black;
   text-decoration: none;
+}
+
+input.search-query {
+  vertical-align: top;
 }
